# embeddenator-core

./: .env.example  .gitignore  CHANGELOG.md  CORE_ROADMAP_REVIEW_2026-01-15.md  Cargo.toml  PROJECT_STATUS.md  README.md  SPEC_KIT_SETUP.md  SPLIT_TRACKER.md  STATUS.md  TESTING.md  VERSION_ROADMAP.md  generate_docs.sh  run_tests.sh
.docker/: .dockerignore  Dockerfile.embr-ci  Dockerfile.release  README.md  generate_manifest.py
.github/: multi-agent-rust.agent.md  project-schema.yaml
.github/agents/: documentation-writer.agent.md  embeddenator.agent.md  integration-specialist.agent.md  performance-tuner.agent.md  qa-tester.agent.md  rust-implementer.agent.md  vas-mathematician.agent.md  workflow-orchestrator.agent.md
.github/chatmodes/: embeddenator.chatmode.md
.github/instructions/: docker_holographic.md  planner_vsa.md  python_orchestrator.md  reviewer_embeddenator.md  rust_vsa_engineer.md  tester_embeddenator.md  vsa_specialist.md
.github/tasking/: tracker_vsa.yaml
.github/workflows/: ARM64_RUNNER_SETUP.md  README.md  build-holographic-os.yml  build-push-arm64.yml  build-push-images.yml  ci-amd64.yml  ci-arm64.yml  ci-pre-checks.yml  docker-build.yml  init-speckit.yml  nightly-builds.yml
baselines/snapshots/20260103T211203Z/: raw_index.json
baselines/snapshots/local_smoke/: raw_index.json
benches/: README.md  hierarchical_scale.rs  query_hierarchical.rs  retrieval.rs  simd_cosine.rs  vsa_ops.rs
crates/embeddenator/: Cargo.toml
crates/embeddenator-cli/: Cargo.toml  EXTRACTION_SUMMARY.md  README.md
crates/embeddenator-cli/src/: lib.rs  main.rs
crates/embeddenator-cli/src/commands/: bundle_hier.rs  extract.rs  ingest.rs  mod.rs  mount.rs  query.rs  update.rs
crates/embeddenator-cli/src/utils/: mod.rs  path.rs
crates/embeddenator/benches/: README.md  real_world.rs  vsa_ops.rs
crates/embeddenator/src/: lib.rs  main.rs
crates/embeddenator/src/cli/: mod.rs
crates/embeddenator/src/core/: codebook.rs
crates/embeddenator/src/testing/: mod.rs
crates/embeddenator/tests/: cli.rs  codebook.rs  concurrency.rs  hierarchical.rs  invariants.rs  properties.rs  qa.rs  regression.rs  retrieval.rs  soak.rs  testing_infrastructure.rs
crates/embeddenator/tests/cli/: integration_cli.rs
crates/embeddenator/tests/codebook/: balanced_ternary.rs  projection.rs
crates/embeddenator/tests/concurrency/: lock_free_concurrency.rs
crates/embeddenator/tests/hierarchical/: hierarchical_artifacts_e2e.rs
crates/embeddenator/tests/invariants/: bitsliced_equivalence.rs  block_sparse_invariants.rs  bt_phase1_packed_equivalence.rs  envelope_edge_cases.rs  extended_dimensionality.rs  lens_contract.rs  lens_variants.rs  packed_trit_vec.rs  register_validity.rs  simd_cosine_tests.rs  ternary_refactor_invariants.rs  ternary_signature_index.rs
crates/embeddenator/tests/qa/: qa_comprehensive.rs  test_metrics_integrity.rs  unit_tests.rs
crates/embeddenator/tests/regression/: compression_backward_compat.rs  compression_missing_codec.rs  e2e_regression.rs
crates/embeddenator/tests/retrieval/: query_shift_sweep.rs  retrieval_index.rs
crates/embeddenator/tests/soak/: memory_scaled.rs  soak_memory.rs
crates/embeddenator/tests/support/: bt_migration.rs
docs/: ARM64_TEST_RESULTS.md  BALANCED_TERNARY_MIGRATION_TESTING.md  BALANCED_TERNARY_REFACTOR_ROADMAP.md  COMPONENT_ARCHITECTURE.md  CRATE_STRUCTURE_AND_CONCURRENCY.md  ERROR_RECOVERY_TEST_COVERAGE.md  GITHUB_PROJECTS_SETUP.md  HIERARCHICAL_FORMAT.md  KERNEL_VSA_INTEROP.md  LOCAL_DEVELOPMENT.md  RECURSIVE_UNFOLDING.md  RESEARCH_METHODOLOGY.md  RETRIEVAL_INDEX.md  RUNNER_AUTOMATION.md  SECURITY_AUDIT_FS.md  SECURITY_AUDIT_INTEROP.md  SECURITY_AUDIT_PHASE3_PRE_PUBLISHING.md  SECURITY_AUDIT_RETRIEVAL.md  SECURITY_AUDIT_SIMD_COSINE.md  SELF_HOSTED_CI_PROJECT_SPEC.md  SIMD_OPTIMIZATION.md  SPECIALIZED_AI_ASSISTANTS.md  STANDARD_BASELINE_CODEBOOK.md  THROUGHPUT.md  VERSIONING.md
docs/adr/: ADR-001-sparse-ternary-vsa.md  ADR-002-multi-agent-workflow-system.md  ADR-003-self-hosted-runner-architecture.md  ADR-004-holographic-os-container-design.md  ADR-005-hologram-package-isolation.md  ADR-006-dimensionality-sparsity-scaling.md  ADR-007-codebook-security.md  ADR-008-bundling-semantics-and-cost-aware-hybrid.md  ADR-009-deterministic-hierarchical-artifacts.md  ADR-010-router-shard-bounded-indexing.md  ADR-011-multi-input-namespace-management.md  ADR-012-reusable-codebook-index.md  ADR-013-hierarchical-manifest-format.md  ADR-014-incremental-updates.md  ADR-016-component-decomposition.md  ADR-017-phase2a-component-extraction.md  README.md
docs/handoff/: DOCUMENTATION_UPDATE_2026-01-10.md  PHASE2A_SESSION_2026_01_04.md  PHASE2B_CLI_COMPLETE_2026_01_04.md  PHASE2B_HANDOFF_2026_01_04.md  PHASE2B_TO_PHASE3_TRANSITION.md  PHASE3_EXECUTION_PLAN.md  PHASE3_ORCHESTRATION_PLAN.md  SESSION_2026_01_04_INTEROP_COMPLETE.md  SPLIT_RECONCILIATION_PLAN.md  WORKSPACE_RESTRUCTURE_PLAN.md
examples/: debug_single_byte.rs
scripts/: fetch_standard_codebook.py  homelab-build.sh  setup-speckit.sh  validate_simd.sh
src/: cli.rs  lib.rs  main.rs
tests/: bt_phase1_packed_equivalence.rs  bt_phase2_scratch_invariants.rs  common.rs  e2e_regression.rs  error_recovery.rs  exhaustive_trit_tests.rs  hierarchical_artifacts_e2e.rs  hierarchical_determinism.rs  hierarchical_unfolding.rs  incremental_updates.rs  integration_cli.rs  memory_scaled.rs  packed_trit_vec.rs  properties.proptest-regressions  properties.rs  qa_comprehensive.proptest-regressions  qa_comprehensive.rs  reconstruction_guarantee.rs  simd_cosine_tests.rs  soak_memory.rs  ternary_refactor_invariants.rs  unit_tests.rs  vsa_properties.proptest-regressions  vsa_properties.rs
tests/common/: mod.rs
